# chat-app-backend

./: .dockerignore  .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  sqlx-data.json
.github/workflows/: rust-ci-cd.yml
migrations/: 20240318000001_init.sql
src/: app.rs  lib.rs  main.rs
src/config/: database.rs  jwt.rs  mod.rs
src/handlers/: auth.rs  message.rs  mod.rs  user.rs  websocket.rs
src/middleware/: auth.rs
src/models/: errors.rs  message.rs  mod.rs  user.rs
src/routes/: mod.rs
src/utils/: mod.rs
tests/: test_auth.rs  test_auth_handlers.rs  test_message_model.rs  test_user_model.rs
