[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "time", "migrate", "macros", "any", "offline"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
bcrypt = "0.17.0"
http = "1.0.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
dotenv = "0.15"
async-stream = "0.3"
futures = "0.3"
once_cell = "1.17"
dashmap = "6.1.0"

[dev-dependencies]
tokio-test = "0.4.2"
axum-test = "17.2.0"
tower = { version = "0.5.2", features = ["util"] }
mockall = "0.13.1"
serial_test = "3.1.0"
wiremock = "0.6"
uuid = { version = "1.3", features = ["v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
